--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="">Gmail</a></li>
-                    <li><a href="">Imagens</a></li>
-                    <li><img src="./img/menu-bolinhas.png" alt="menu-bolinhas"></li>
-                    <li><img src="./img/pessoa.png" alt=""></li>
+                    <span class="text"><li><a href="">Gmail</a></li></span>
+                    <span class="text"><li><a href="">Imagens</a></li></span>
+                    <span class="icone"><li><img class="bolinhas" src="./img/menu-bolinhas.png" alt="menu-bolinhas"></li></span>
+                    <span class="icone"><li><img class="pessoa" src="./img/pessoa.png" alt=""></li></span>
                 </ul>
             </nav>
         </div>
@@ -26,16 +26,18 @@
         <div class="barra_pesquisa">
             <img src="./img/lupa.webp" alt="lupa">
             <input type="text" placeholder="Pesquise no Google ou escreva um URL">
-            <img src="./img/microfone.png" alt="microfone">
-            <img src="./img/camera.webp" alt="camera">
+            <button class="metodo_pesquisa"><img src="./img/microfone.png" alt=""></button>
+            <button class="metodo_pesquisa"><img src="./img/camera.webp" alt=""></button>
         </div>
         <div class="adicionar_atalho">
             <img src="./img/+.png" alt="icone-mais">
             <h3>Adicionar atalho</h3>
         </div>
+    </section>
+    <footer>
         <div class="personalizar">
             <button><img src="./img/lapis.png" alt="lapis">Personalizar o Chome</button>
         </div>
-    </section>
+    </footer>
 </body>
 </html>
